Bug 2013429: Avoid :-moz-column-span-wrapper as alignment containing block. r=layout-reviewers,TYLin

Differential Revision: https://phabricator.services.mozilla.com/D281285